--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 <body>
 <div id="container">
   
-  <div  class="inside-container qr-container">
-  <img id="qrcode" src="design/qrcode.png" alt="">
-</div>
+  
+  <img id="qrcode" src="image-qr-code.png" alt="">
+
 <div  class="inside-container content">
  <h2 >Improve your front-end skills by building projects</h2> 
 
